# wasmer_tests

./: README.md
bench_rust/: Cargo.toml  run_benchmarks.sh
bench_rust/benches/: benchmark.rs
bench_rust/src/: lib.rs
std/: Cargo.toml  build.rs  gen_intrinsics.sh
std/src/: intrinsics.c  intrinsics.h  intrinsics.rs
suite/: Cargo.toml
suite/src/: lib.rs
