[package]
name = "bench_rust"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@uwe.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wasm", "native"]

wasm = ["wasmer-runtime", "wasmer-runtime-core", "wasmer-llvm-backend"]

native = ["suite"]

[dependencies]
#wasmer-runtime = { path = "../../wasmer/lib/runtime", optional = true}
#wasmer-runtime-core = { path = "../../wasmer/lib/runtime-core", optional = true }
#wasmer-llvm-backend = { path = "../../wasmer/lib/llvm-backend", optional = true } 

wasmer-runtime = { version = "0.17.1", optional = true }
wasmer-runtime-core = { version = "0.17.1", optional = true }
wasmer-llvm-backend = { version = "0.17.1", optional = true } 


suite = { path = "../suite", optional = true }
wasm_std = { path = "../std" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
